syntax = "proto3";

package question_form_updater_v1;

option go_package = "github.com/Kosfedev/learn_go/pkg/question_form_updater_v1;question_form_updater_v1";

import "question.proto";

service QuestionFormUpdaterV1 {
  rpc CreateWithOptions(CreateWithOptionsRequest) returns(CreateWithOptionsResponse);
  rpc AddSubcategories(AddSubcategoriesRequest) returns (AddSubcategoriesResponse);
  rpc RemoveSubcategories(RemoveSubcategoriesRequest) returns (RemoveSubcategoriesResponse);
  rpc AddSets(AddSetsRequest) returns (AddSetsResponse);
  rpc RemoveSets(RemoveSetsRequest) returns (RemoveSetsResponse);
}

message CreateWithOptionsRequest {
  message Data {
    question_v1.NewQuestion question = 1;
    repeated question_v1.NewQuestionOption options = 2;
  }

  Data data = 1;
}

message CreateWithOptionsResponse {
  int64 id = 1;
}

message AddSubcategoriesRequest {
  int64 question_id = 1;
  repeated int64 subcategory_ids = 2;
}

message AddSubcategoriesResponse {
}

message RemoveSubcategoriesRequest {
  int64 question_id = 1;
  repeated int64 subcategory_ids = 2;
}

message RemoveSubcategoriesResponse {
}

message AddSetsRequest {
  int64 question_id = 1;
  repeated int64 set_ids = 2;
}

message AddSetsResponse {
}

message RemoveSetsRequest {
  int64 question_id = 1;
  repeated int64 set_ids = 2;
}

message RemoveSetsResponse {
}



